# haamufx-backend

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TASK_BOARD.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
